--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 <h1>Iwan Tandjaya's Portfolio</h1>
 <h2>Software Engineer, Machine Learning</h2>
 <hr>
-<img src="./assets/images/ethan-0.png">
+<img src="./assets/images/ethan-0.jpg">
     
 <h3>
     <a href="../4.3 HTML Porfolio Project/public/movie-ranking.html"
